# rasputin-stack

./: .gitignore  README.md
backend/: .gitignore  CONTRIBUTING.md  INTEGRATION_REPORT.md  README.md  package.json
browser/: README.md  background.js  content.js  manifest.json
cli/: .gitignore  .npmignore  LICENSE  README.md  package.json
config/: README.md
council/: README.md  council.py  swarm_protocol.py
crons/: README.md
dashboard/: .cost_history.json  .forecast_cache.json  .manus_cmd_history.json  .memory_access.json  .model_stats.json  .total_cost.json  AGENT_AUTOPSY_FEATURE.md  BEFORE_AFTER.md  CHANGELOG.md  CHANGELOG_NEW_SECTIONS.md  CHAT_UPGRADE_SUMMARY.md  COST_FORECASTING_FEATURE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUMMARY_MODEL_LEADERBOARD.md  DESIGN_REVIEW_REPORT.md  ERROR_ANALYTICS_FEATURE.md  EXECUTIVE_SUMMARY.txt  FIX_COMPLETE.md  FIX_LAYOUT.md  GATEWAY_BRIDGE_IMPLEMENTATION.md  GPU_REPLAY_FEATURE.md  HEALTH_SCORE_FEATURE.md  IMPLEMENTATION_SUMMARY.md  KEYBOARD_SHORTCUTS_FEATURE.md  LATENCY_ALERTING_FEATURE.md  LATENCY_ENHANCEMENT_SUMMARY.txt  (+84 more)
method/: LICENSE  README.md  pyproject.toml
method/benchmark/: generate_test_data.py  run_benchmark.py  stress_test_failover.py
method/paper/: compaction_paper.md  compaction_quality_analysis.md  summary_opus_46.md  summary_sonnet_46.md
method/posts/: openclaw-discussion.md  reddit-ai-agents.md  reddit-claudeai.md  reddit-claudecode.md  reddit-localllama.md
method/src/cartu_method/: __init__.py  backends.py  extractors.py  rescue.py
method/website/: index.html  script.js  style.css
(+624 files in other folders)
